general/argocd/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # type of authentication (optional)
    # nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions (optional)
    # nginx.ingress.kubernetes.io/auth-secret: admin-auth
    # message to display with an appropriate context why the authentication is required (optional)
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required.'
  name: argocd-ingress
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-cd-argocd-server
            port:
              number: 443
  tls:
  - hosts:
    - argocd.***REMOVED***
    secretName: letsencrypt
